[gd_scene load_steps=9 format=2]

[ext_resource path="res://Arts/Sushi/salmon.png" type="Texture" id=1]
[ext_resource path="res://Objects/Sushi/Sushi_Piece.gd" type="Script" id=2]
[ext_resource path="res://Scripts/RandomSFX.gd" type="Script" id=3]
[ext_resource path="res://Sounds/drop.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/grab.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 46.9889
height = 139.577

[sub_resource type="Animation" id=2]
resource_name = "drop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.3
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.1, 0.18, 0.3 ),
"transitions": PoolRealArray( 0.5, 2, 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 0.9, 0.9 ), Vector2( 1.2, 1.2 ), Vector2( 1.1, 1.1 ) ]
}

[node name="Sushi_Piece" type="Area2D"]
z_index = 10
z_as_relative = false
collision_layer = 8
collision_mask = 176
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.329972, -5.36442e-07 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.57079
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/drop = SubResource( 2 )
anims/pick_up = SubResource( 3 )

[node name="Grab" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "SFX"
script = ExtResource( 3 )

[node name="Drop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "SFX"
script = ExtResource( 3 )
base_volume = -5.0
[connection signal="area_entered" from="." to="." method="_on_Sushi_Piece_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Sushi_Piece_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_Sushi_Piece_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Sushi_Piece_mouse_exited"]
[connection signal="on_dragging" from="." to="." method="_on_Sushi_Piece_on_dragging"]
[connection signal="on_released" from="." to="." method="_on_Sushi_Piece_on_released"]
